--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="author" content="风筝图床" />
 
 <!-- 🌐 浏览器图标 -->
-    <link rel="icon" type="image/png" href="https://i.111666.best/image/aqATobQj67RfOlVKfBU4v0.png">
+    <link rel="icon" type="image/png" href="https://boli.ddeed.de/logo.png">
 
     <!-- 🍎 iOS / iPadOS 主屏幕支持 -->
-    <link rel="apple-touch-icon" href="https://i.111666.best/image/aqATobQj67RfOlVKfBU4v0.png">
+    <link rel="apple-touch-icon" href="https://boli.ddeed.de/logo.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="玻璃相册">
