--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta name="apple-mobile-web-app-title" content="玻璃相册">
 
     <link rel="manifest" href="/manifest.json">
-  <script type="module" crossorigin src="/assets/index.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/index.css">
+  <script type="module" crossorigin src="/assets/indexcdn.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/indexcdn.css">
 </head>
 
   <body>
